# kgat

./: .gitignore  README.md  pyproject.toml
configs/controller/: decoder.yaml
configs/train/: escalation_gate.yaml  grpo.yaml  grpo_routing.yaml  judge.yaml  routing_warmup.yaml  sft.yaml
docs/: RUN-AGREEMENT-SIGNAL.md
docs/results/agreement-routing-2026-07-20/: VERDICT.md  bundle.sha256  chunk_provenance.jsonl  comparison.json  comparison.md  confidence_baseline.json  cost_prevalidation.json  outcomes.jsonl  preflight.sha256  remote_manifest.sha256  run_manifest.json  runpod.json  teardown_evidence.json  transfer.sha256
docs/superpowers/plans/: 2026-07-20-canonical-agreement-gpu-validation.md
docs/superpowers/specs/: 2026-07-20-agreement-routing-production-design.md
scripts/: pull_agreement_artifacts.sh  run_agreement_max28.sh
src/kgat/controller/: constrained_decoding.py  decoder_policy.py
src/kgat/data/: backfill_export.py  finkg.py  gate_export.py  judge_export.py  schemas.py
src/kgat/eval/: agreement_validation.py  extractor_cascade.py  gate_frontier.py  plot_training.py  routing_frontier.py
src/kgat/train/: backfill_routing.py  edge_judge.py  escalation_gate.py  graph_signals.py  grpo.py  grpo_routing.py  judge.py  reward.py  routing_warmup.py  sft.py
src/kgat/traversal/: engine.py
src/kgat/utils/: hf.py
tests/: test_agreement_run_scripts.py  test_agreement_validation.py  test_backfill_export.py  test_backfill_routing.py  test_constrained_decoding.py  test_direction_negatives.py  test_edge_judge.py  test_extractor_cascade.py  test_finkg.py  test_gate_export.py  test_gate_frontier.py  test_graph_signals.py  test_grpo_math.py  test_grpo_routing.py  test_judge_export.py  test_plot_training.py  test_routing_frontier.py  test_routing_reward_hack.py  test_triple_grammar.py
